--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 pandas==1.3.4
-dash-core-components ==2.0.0
-dash_bootstrap_components == 1.0.1
-dash_table == 5.0.0
+dash-core-components==2.0.0
+dash-html-components==1.0.3
+dash-bootstrap-components==1.0.1
+dash-table == 5.0
 gunicorn==20.0.4
+plotly==4.8.2
