--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ dash_bootstrap_components == 1.0.1
 dash_core_components == 2.0.0
 dash_html_components == 2.0.0
 plotly == 5.4.0
+openpyxl == 3.0.9
 
